NCC with optimization (Integer)